<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xmlns="http://maven.apache.org/POM/4.0.0"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.mscg</groupId>
	<artifactId>advent-of-code</artifactId>
	<version>1.0-SNAPSHOT</version>
	<modules>
		<module>day1</module>
		<module>day2</module>
		<module>day3</module>
		<module>day4</module>
		<module>day5</module>
		<module>day6</module>
		<module>day7</module>
		<module>day8</module>
		<module>day9</module>
		<module>day10</module>
		<module>day11</module>
		<module>day12</module>
		<module>day13</module>
		<module>day14</module>
		<module>day15</module>
		<module>day16</module>
		<module>day17</module>
		<module>day18</module>
		<module>day19</module>
		<module>day20</module>
		<module>day21</module>
		<module>day22</module>
	</modules>
	<packaging>pom</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<lombok.version>1.18.22</lombok.version>
		<record.builder.version>28</record.builder.version>
		<java.version>17</java.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.jooq</groupId>
			<artifactId>jool</artifactId>
			<version>0.9.14</version>
		</dependency>

		<dependency>
			<groupId>one.util</groupId>
			<artifactId>streamex</artifactId>
			<version>0.8.1</version>
		</dependency>

		<dependency>
			<groupId>io.soabase.record-builder</groupId>
			<artifactId>record-builder-core</artifactId>
			<version>${record.builder.version}</version>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.7.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>${java.version}</release>
					<compilerArgs>--enable-preview</compilerArgs>
					<annotationProcessorPaths>
						<annotationProcessorPath>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</annotationProcessorPath>
						<annotationProcessorPath>
							<groupId>io.soabase.record-builder</groupId>
							<artifactId>record-builder-processor</artifactId>
							<version>${record.builder.version}</version>
						</annotationProcessorPath>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<argLine>--enable-preview</argLine>
				</configuration>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>3.1.0</version>
					<executions>
						<execution>
							<id>add-source</id>
							<phase>generate-sources</phase>
							<goals>
								<goal>add-source</goal>
							</goals>
							<configuration>
								<sources>
									<source>${project.build.directory}/generated-sources/annotations</source>
								</sources>
							</configuration>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>